[gd_scene load_steps=13 format=2]

[ext_resource path="res://mocraAdventure/player_tag/script.gd" type="Script" id=1]
[ext_resource path="res://images/default2.png" type="Texture2D" id=2]
[ext_resource path="res://images/default_icon.png" type="Texture2D" id=3]
[ext_resource path="res://ubuntu150.tres" type="FontFile" id=4]
[ext_resource path="res://images/default1.png" type="Texture2D" id=5]
[ext_resource path="res://images/default3.png" type="Texture2D" id=6]
[ext_resource path="res://mocraAdventure/player_tag/not_ready.png" type="Texture2D" id=7]
[ext_resource path="res://mocraAdventure/player_tag/loading.png" type="Texture2D" id=8]
[ext_resource path="res://fonts/Ubuntu-Regular.ttf" type="FontFile" id=9]
[ext_resource path="res://fonts/ubuntu30.tres" type="FontFile" id=10]

[sub_resource type="FontFile" id=2]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=1]
resource_name = "loading"
length = 8.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("LoadingSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, -90, -0.25, 0, 0.25, 0, -180, -0.25, 0, 0.25, 0, -270, -0.25, 0, 0.25, 0, -360, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 2, 4, 6, 8 )
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1270.0
offset_bottom = -780.0
custom_minimum_size = Vector2( 650, 300 )
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
offset_left = -0.902527
offset_top = 0.902496
offset_right = 649.097
offset_bottom = 300.902
custom_minimum_size = Vector2( 650, 300 )
texture = ExtResource( 2 )
expand = true

[node name="Profile" type="Control" parent="."]
offset_left = 15.0
offset_top = 15.0
offset_right = 635.0
offset_bottom = 135.0

[node name="ProfileImage" type="TextureRect" parent="Profile"]
offset_right = 120.0
offset_bottom = 120.0
custom_minimum_size = Vector2( 120, 120 )
texture = ExtResource( 3 )
expand = true

[node name="NameLabel" type="Label" parent="Profile"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.5
offset_top = -44.7898
offset_right = 170.5
offset_bottom = 124.21
scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 4 )
text = "XxKillerXx"

[node name="Selection" type="Control" parent="."]
offset_left = 15.0
offset_top = 150.0
offset_right = 635.0
offset_bottom = 285.0

[node name="TextureRect" type="TextureRect" parent="Selection"]
offset_right = 620.0
offset_bottom = 135.0
custom_minimum_size = Vector2( 620, 0 )
texture = ExtResource( 5 )
expand = true

[node name="Character" type="Control" parent="Selection"]
offset_left = 30.0
offset_top = 5.0
offset_right = 155.0
offset_bottom = 130.0
custom_minimum_size = Vector2( 125, 125 )

[node name="background" type="TextureRect" parent="Selection/Character"]
offset_right = 125.0
offset_bottom = 125.0
texture = ExtResource( 6 )
expand = true

[node name="Avatar" type="TextureRect" parent="Selection/Character"]
offset_left = 11.0
offset_top = 5.0
offset_right = 211.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2( 0.5, 0.5 )

[node name="AmountLabel" type="Label" parent="Selection/Character"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_bottom = 34.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="CardNameLabel" type="Label" parent="Selection/Character"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -34.0
offset_right = 8.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="Object1" type="Control" parent="Selection"]
offset_left = 175.0
offset_top = 5.0
offset_right = 300.0
offset_bottom = 130.0
custom_minimum_size = Vector2( 125, 125 )

[node name="background" type="TextureRect" parent="Selection/Object1"]
offset_right = 125.0
offset_bottom = 125.0
texture = ExtResource( 6 )
expand = true

[node name="Avatar" type="TextureRect" parent="Selection/Object1"]
offset_left = 11.0
offset_top = 5.0
offset_right = 211.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2( 0.5, 0.5 )

[node name="AmountLabel" type="Label" parent="Selection/Object1"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="CardNameLabel" type="Label" parent="Selection/Object1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -34.0
offset_right = 8.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="Object2" type="Control" parent="Selection"]
offset_left = 320.0
offset_top = 5.0
offset_right = 445.0
offset_bottom = 130.0
custom_minimum_size = Vector2( 125, 125 )

[node name="background" type="TextureRect" parent="Selection/Object2"]
offset_right = 125.0
offset_bottom = 125.0
texture = ExtResource( 6 )
expand = true

[node name="Avatar" type="TextureRect" parent="Selection/Object2"]
offset_left = 11.0
offset_top = 5.0
offset_right = 211.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2( 0.5, 0.5 )

[node name="AmountLabel" type="Label" parent="Selection/Object2"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_bottom = 34.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="CardNameLabel" type="Label" parent="Selection/Object2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -34.0
offset_right = 8.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="Object3" type="Control" parent="Selection"]
offset_left = 465.0
offset_top = 5.0
offset_right = 590.0
offset_bottom = 130.0
custom_minimum_size = Vector2( 125, 125 )

[node name="background" type="TextureRect" parent="Selection/Object3"]
offset_right = 125.0
offset_bottom = 125.0
texture = ExtResource( 6 )
expand = true

[node name="Avatar" type="TextureRect" parent="Selection/Object3"]
offset_left = 11.0
offset_top = 5.0
offset_right = 211.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2( 0.5, 0.5 )

[node name="AmountLabel" type="Label" parent="Selection/Object3"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.0
offset_bottom = 34.0
grow_horizontal = 0
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="CardNameLabel" type="Label" parent="Selection/Object3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.5
offset_top = -34.0
offset_right = 8.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="ReadyTexture" type="TextureRect" parent="."]
offset_left = 555.0
offset_top = 49.0
offset_right = 605.0
offset_bottom = 99.0
texture = ExtResource( 7 )

[node name="LoadingSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2( 580, 77 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/loading = SubResource( 1 )
